[package]
name = "keylime-revocation-webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.6"
actix-files = "0.6"
actix-rt = "2"
actix-web =  { version = "4", default-features = false, features = ["macros", "openssl"] }
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.6"
futures-util = "0.3"
log = "0.4"
openssl = "0.10.15"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version= "1.0.80", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = {version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = {version = "0.1", features = ["sync"] }
